<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/ThemeButtonSettings">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/settings_toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_height_toolbar_56dp"
        android:gravity="center"
        app:navigationIcon="@drawable/image_back_arrow"
        app:title="@string/text_settings"
        style="@style/ToolbarBase"
        />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_setting"
        style="@style/ButtonStyleSettings"
        android:layout_marginTop="@dimen/layout_margin_top_24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/text_dark_theme"

        android:theme="@style/ThemeButtonSettings"

        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/share_button"
        style="@style/ButtonStyleSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/image_share"
        android:text="@string/text_share_app"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/write_to_tech_support_button"
        style="@style/ButtonStyleSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/image_support"
        android:text="@string/text_support"
        app:tint="?attr/colorOnSurface" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/user_agreement_button"
        style="@style/ButtonStyleSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/image_arrow_right"
        android:text="@string/text_user_agreement"

        />

</LinearLayout>