<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/ThemeAudioPlayerActivity"
    tools:context=".presentation.ui.AudioPlayer">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/audio_player_toolbar"
        style="@style/ToolbarBase"
        android:layout_width="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/image_back_arrow" />

    <ScrollView
        android:layout_width="@dimen/wh_0dp"
        android:layout_height="@dimen/wh_0dp"
        android:layout_marginTop="26dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/audio_player_toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideLeftBorder"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/layout_wh24dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideRightBorder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="@dimen/layout_wh24dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideLeftBorder16"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="16dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideRightBorder16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="16dp" />

            <ImageView
                android:id="@+id/album_art"
                android:layout_width="@dimen/wh_0dp"
                android:layout_height="@dimen/wh_0dp"
                android:contentDescription="@string/album_art"
                android:scaleType="centerCrop"
                app:layout_constraintDimensionRatio="h, 1:1"
                app:layout_constraintEnd_toStartOf="@id/guideRightBorder"
                app:layout_constraintStart_toEndOf="@id/guideLeftBorder"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/placeholder_album_player" />

            <TextView
                android:id="@+id/track_name"
                style="@style/playerTrackName"
                android:layout_width="@dimen/wh_0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:textSize="24sp"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@id/guideLeftBorder"
                app:layout_constraintTop_toBottomOf="@id/album_art"
                tools:text="Название трека" />

            <TextView
                android:id="@+id/track_artist_name"
                style="@style/playerArtistName"
                android:layout_width="@dimen/wh_0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/ys_display_medium"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@id/guideRightBorder"
                app:layout_constraintStart_toStartOf="@id/guideLeftBorder"
                app:layout_constraintTop_toBottomOf="@id/track_name"
                tools:text="Название артиста" />

            <ImageView
                android:id="@+id/add_to_playlist_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/plus"
                app:layout_constraintBottom_toBottomOf="@id/add_to_favorite_button"
                app:layout_constraintEnd_toStartOf="@id/play_pause_button"
                app:layout_constraintStart_toEndOf="@id/guideLeftBorder"
                app:layout_constraintTop_toTopOf="@id/add_to_favorite_button"
                android:visibility="visible" />

            <ImageButton
                android:id="@+id/play_pause_button"
                style="@style/playPauseButton"
                android:layout_width="84dp"
                android:layout_height="84dp"
                android:layout_marginTop="30dp"
                android:contentDescription="@string/play_pause"
                app:layout_constraintEnd_toStartOf="@id/add_to_favorite_button"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@id/add_to_playlist_button"
                app:layout_constraintTop_toBottomOf="@id/track_artist_name"
                tools:src="@drawable/play"
                android:visibility="visible"/>

            <ImageButton
                android:id="@+id/add_to_favorite_button"
                style="@style/optional_buttons"
                android:contentDescription="@string/favourite"
                app:layout_constraintBottom_toBottomOf="@id/play_pause_button"
                app:layout_constraintEnd_toStartOf="@id/guideRightBorder"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@id/play_pause_button"
                app:layout_constraintTop_toBottomOf="@id/track_artist_name"
                app:layout_constraintTop_toTopOf="@id/play_pause_button"
                app:layout_constraintVertical_bias="0.5"
                tools:src="@drawable/favourites" />

            <TextView
                android:id="@+id/playerTrackDuration"
                style="@style/playerArtistName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12.33dp"
                app:layout_constraintEnd_toStartOf="@id/guideRightBorder"
                app:layout_constraintStart_toEndOf="@id/guideLeftBorder"
                app:layout_constraintTop_toBottomOf="@id/play_pause_button"
                tools:text="0:30" />

            <TextView
                android:id="@+id/track_duration_label"
                style="@style/playerDescriptionSongLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/guideLeftBorder16"
                app:layout_constraintTop_toBottomOf="@id/playerTrackDuration"
                tools:text="@string/duration" />

            <TextView
                android:id="@+id/track_duration_value"
                style="@style/playerDescriptionSongRight"
                android:layout_width="@dimen/wh_0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="@id/guideRightBorder16"
                app:layout_constraintStart_toEndOf="@id/track_duration_label"
                app:layout_constraintTop_toBottomOf="@id/playerTrackDuration"
                tools:text="00:00" />

            <TextView
                android:id="@+id/album_name_label"
                style="@style/playerDescriptionSongLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/guideLeftBorder16"
                app:layout_constraintTop_toBottomOf="@id/track_duration_label"
                tools:text="@string/album" />

            <TextView
                android:id="@+id/album_name_value"
                style="@style/playerDescriptionSongRight"
                android:layout_width="@dimen/wh_0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="@id/guideRightBorder16"
                app:layout_constraintStart_toEndOf="@id/album_name_label"
                app:layout_constraintTop_toBottomOf="@id/track_duration_value"
                tools:text="Название альбома" />


            <TextView
                android:id="@+id/track_year_label"
                style="@style/playerDescriptionSongLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/guideLeftBorder16"
                app:layout_constraintTop_toBottomOf="@id/album_name_label"
                tools:text="@string/releaseYear" />

            <TextView
                android:id="@+id/track_year_value"
                style="@style/playerDescriptionSongRight"
                android:layout_width="@dimen/wh_0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="@id/guideRightBorder16"
                app:layout_constraintStart_toEndOf="@id/track_year_label"
                app:layout_constraintTop_toBottomOf="@id/album_name_value"
                tools:text="Год" />


            <TextView
                android:id="@+id/track_genre_label"
                style="@style/playerDescriptionSongLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/guideLeftBorder16"
                app:layout_constraintTop_toBottomOf="@id/track_year_label"
                tools:text="@string/genre" />

            <TextView
                android:id="@+id/track_genre_value"
                style="@style/playerDescriptionSongRight"
                android:layout_width="@dimen/wh_0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="@id/guideRightBorder16"
                app:layout_constraintStart_toEndOf="@id/track_genre_label"
                app:layout_constraintTop_toBottomOf="@id/track_year_value"
                tools:text="Жанр" />

            <TextView
                android:id="@+id/track_country_label"
                style="@style/playerDescriptionSongLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/guideLeftBorder16"
                app:layout_constraintTop_toBottomOf="@id/track_genre_label"
                tools:text="@string/country" />

            <TextView
                android:id="@+id/track_country_value"
                style="@style/playerDescriptionSongRight"
                android:layout_width="@dimen/wh_0dp"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/layout_margin_top_24dp"
                app:layout_constraintEnd_toEndOf="@id/guideRightBorder16"
                app:layout_constraintStart_toEndOf="@id/track_country_label"
                app:layout_constraintTop_toBottomOf="@id/track_genre_value"
                tools:text="Страна" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>